objects/Leave__c.object
<CustomObject>
    <label>Leave</label>
    <nameField>
        <label>Leave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Paid Leave</fullName>
                </value>
                <value>
                    <fullName>Privelage Leave</fullName>
                </value>
                <value>
                    <fullName>Emergency Leave</fullName>
                </value>
                <value>
                    <fullName>Hospital Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Days__c</fullName>
        <formula>EndDate__c  -  TODAY()</formula>
        <label>No Of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>